syntax = "proto3";

package chef.automate.api.event_feed.response;
option go_package = "github.com/chef/automate/components/automate-gateway/api/event_feed/response";
import "automate-gateway/api/event_feed/response/event.proto";


message EventStrings {
    repeated EventString strings = 1;
    string start = 2;
    string end = 3;
    int32 hours_between = 4;
}

message EventString {
    repeated EventCollection collection = 1;
    string event_action = 2;
}

message EventCollection {
    repeated EventCount events_count = 1;
}
